--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,6 @@
     "discord.js": "^14.0.0-dev.1653091711-fdeac9d",
     "fluent-ffmpeg": "^2.1.2",
     "libsodium-wrappers": "^0.7.9",
-    "node-fetch": "^3.2.4",
-    "path": "^0.12.7"
+    "node-fetch": "^3.2.4"
   }
 }
